--- a/CustomDialogs/build.gradle
+++ b/CustomDialogs/build.gradle
@@ -14,6 +14,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        targetSdkVersion 31
+        minSdkVersion 23
     }
 
     buildTypes {
