--- a/CustomDialogs/build.gradle
+++ b/CustomDialogs/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'maven-publish'
 }
 
+
+
 android {
     compileSdk 31
 
@@ -41,11 +43,23 @@ afterEvaluate {
     publishing{
         publications{
             release(MavenPublication){
+                def versionPropsFile = file('version.properties')
+                def versionBuild
+
+                if (versionPropsFile.canRead()) {
+                    def Properties versionProps = new Properties()
+                    versionProps.load(new FileInputStream(versionPropsFile))
+                    versionBuild = versionProps['VERSION_BUILD'].toString()
+                } else {
+                    throw new FileNotFoundException("Could not read version.properties!")
+                }
+
                 from components.release
+
 
                 groupId = 'com.github.TheRandomCrafter83'
                 artifactId = 'custom-dialogs'
-                version = '1.1'
+                version = versionBuild
             }
         }
     }
