--- a/CustomDialogs/build.gradle
+++ b/CustomDialogs/build.gradle
@@ -1,6 +1,15 @@
 plugins {
     id 'com.android.library'
     id 'maven-publish'
+    id 'signing'
+}
+
+
+
+ext {
+    PUBLISH_GROUP_ID = ' io.github.therandomcrafter83'
+    PUBLISH_VERSION = '1.3'
+    PUBLISH_ARTIFACT_ID = 'custom-dialogs'
 }
 
 android {
@@ -32,33 +41,92 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'org.jetbrains:annotations:15.0'
 }
 
-afterEvaluate {
-    publishing{
-        publications{
-            release(MavenPublication){
-                def versionPropsFile = file('version.properties')
-                def versionBuild
 
-                if (versionPropsFile.canRead()) {
-                    def Properties versionProps = new Properties()
-                    versionProps.load(new FileInputStream(versionPropsFile))
-                    versionBuild = versionProps['VERSION_BUILD'].toString()
+
+//afterEvaluate {
+//    publishing{
+//        publications{
+//            release(MavenPublication){
+////                def versionPropsFile = file('version.properties')
+////                def versionBuild
+////
+////                if (versionPropsFile.canRead()) {
+////                    def Properties versionProps = new Properties()
+////                    versionProps.load(new FileInputStream(versionPropsFile))
+////                    versionBuild = versionProps['VERSION_BUILD'].toString()
+////                } else {
+////                    throw new FileNotFoundException("Could not read version.properties!")
+////                }
+////
+////                from components.release
+////
+////
+////                groupId = 'com.github.TheRandomCrafter83'
+////                artifactId = 'custom-dialogs'
+////                version = versionBuild
+//
+//            }
+//        }
+//    }
+//}
+
+
+
+
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                groupId PUBLISH_GROUP_ID
+                artifactId PUBLISH_ARTIFACT_ID
+                version PUBLISH_VERSION
+
+                if (project.plugins.findPlugin("com.android.library")) {
+                    from components.release
                 } else {
-                    throw new FileNotFoundException("Could not read version.properties!")
+                    from components.java
                 }
 
-                from components.release
+                pom {
+                    name = PUBLISH_ARTIFACT_ID
+                    description = 'Set of custom dialogs'
+                    url = 'https://github.com/TheRandomCrafter83/CustomDialogs'
+                    licenses {
+                        license {
+                            name = 'License'
+                            url = 'https://github.com/TheRandomCrafter83/CustomDialogs/blob/master/LICENSE'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = 'TheRandomCrafter83'
+                            name = 'Carl Williams'
+                            email = 'admin@coderz-f1.com'
+                        }
+                    }
 
-
-                groupId = 'com.github.TheRandomCrafter83'
-                artifactId = 'custom-dialogs'
-                version = versionBuild
+                    scm {
+                        connection = 'scm:git:github.com/TheRandomCrafter83/CustomDialogs.git'
+                        developerConnection = 'scm:git:ssh://github.com/TheRandomCrafter83/CustomDialogs.git'
+                        url = 'https://github.com/TheRandomCrafter83/CustomDialogs/tree/master/'
+                    }
+                }
             }
         }
     }
+}
+
+signing {
+    useInMemoryPgpKeys(
+            rootProject.ext["signing.keyId"],
+            rootProject.ext["signing.key"],
+            rootProject.ext["signing.password"],
+    )
+    sign publishing.publications
 }
