--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,18 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+plugins {
+
+    id("io.github.gradle-nexus.publish-plugin") version "1.1.0"
+
+}
+
+apply from: "${rootDir}/scripts/publish-root.gradle"
 
 task clean(type: Delete) {
     delete rootProject.buildDir
