--- a/scripts/publish-root.gradle
+++ b/scripts/publish-root.gradle
@@ -30,6 +30,10 @@ nexusPublishing {
     repositories {
         sonatype {
             /* Existing params here... */
+            stagingProfileId = sonatypeStagingProfileId
+            username = ossrhUsername
+            password = ossrhPassword
+            version = 1.3
             nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
             snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
         }
